2007-09-12	Joel Sherrill <joel.sherrill@OARcorp.com>

	PR 1257/bsps
	* shared/irq/i8259.c, shared/irq/irq.c: Code outside of cpukit should
	use the public API for
	rtems_interrupt_disable/rtems_interrupt_enable. By bypassing the
	public API and directly accessing _CPU_ISR_Disable and
	_CPU_ISR_Enable, they were bypassing the compiler memory barrier
	directive which could lead to problems. This patch also changes the
	type of the variable passed into these routines and addresses minor
	style issues.

2007-09-07	Joel Sherrill <joel.sherrill@OARcorp.com>

	* shared/console/polled_io.c: Change prototype so code compiles.

2007-08-02	Joel Sherrill <joel.sherrill@oarcorp.com>

	* shared/startup/bspstart.c: Split out ShowBATS() so it can be shared
	by more BSPs.
	* shared/showbats.c: New file.

2007-07-09	Thomas Doerfler <Thomas.Doerfler@embedded-brains.de>

	* acinclude.m4, gen83xx/:
	added support for MPC83xx controllers and MPC8349EAMDS board
	
2007-07-02	Thomas Doerfler <Thomas.Doerfler@embedded-brains.de>

	* acinclude.m4, shared/irq/irq_asm.S, shared/irq/irq.c,
	* shared/vectors/vectors_entry.S, shared/vectors/vectors.h,
	* shared/vectors/vectors_init.c, shared/vectors/vectors.S:
	converted various BSP specific implementations into a more general
	"shared" one

2007-07-02	Thomas Doerfler <Thomas.Doerfler@embedded-brains.de>

	* virtex/:
	integrated "virtex" BSP to support PPC core implemented in a
	Xilinx virtex FPGA

2007-06-20	Joel Sherrill <joel.sherrill@oarcorp.com>

	* shared/uboot_dump_bdinfo.c: New file.

2007-04-17	Joel Sherrill <joel@OARcorp.com>

	* psim/tools/runtest: Do not run pppd.exe from batch mode script.

2007-04-17	Joel Sherrill <joel@OARcorp.com>

	* shared/start/rtems_crti.S: Remove unnecessary include of libcpu/io.h.

2007-04-09	Thomas Doerfler |Thomas.Doerfler@embedded-brains.de>

	* shared/motorola/motorola.c,shared/openpic/openpic.c, 
	* shared/pci/detect_raven_bridge.c, shared/pci/pci.c:
	adapted to detect/use MVME2400
