@@ -1,3 +1,8 @@
+2007-11-06	Till Straumann <strauman@slac.stanford.edu>
+
+	* shared/pci/pci.c: converted access to pci_config_addr to
+	conditionally defined macros so that bsp.h can override details.
+
 2007-09-12	Joel Sherrill <joel.sherrill@OARcorp.com>
 
 	PR 1257/bsps
